--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,6 +1,9 @@
-.container{
-    padding-top: 5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.container {
+  padding-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+p {
+  font-size: 25px;
 }
